Twice.Compiler.Backend.Parser/Generated/TwiceParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/aren_/RiderProjects/Twice/Twice.Compiler.Backend.Parser/Twice.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class TwiceParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		BLOCK_OPEN=1, BLOCK_CLOSE=2, PAR_OPEN=3, PAR_CLOSE=4, SQUARE_OPEN=5, SQUARE_CLOSE=6, 
		POINTY_OPEN=7, POINTY_CLOSE=8, SEPARATOR=9, SEMI=10, COLON=11, ARROW=12, 
		REVERSE_ARROW=13, BACKSLASH=14, MODULO=15, PLUS=16, MINUS=17, MULT=18, 
		DIV=19, AND=20, OR=21, WHILE=22, IF=23, ELSE=24, FOR=25, IN=26, FUNCTION=27, 
		LET=28, CONST=29, RETURN=30, ASYNC=31, AWAIT=32, EXTERN=33, VARARG=34, 
		DOT=35, BANG=36, UNTIL=37, TRUE=38, FALSE=39, EQUALS=40, COMP=41, TYPE=42, 
		GENERIC=43, IDENTIFIER=44, NUMBER=45, FLOAT=46, DEC=47, DIGIT=48, WS=49, 
		COMMENT=50, STRING=51;
	public const int
		RULE_prog = 0, RULE_chunk = 1, RULE_statement = 2, RULE_flowStatement = 3, 
		RULE_functionType = 4, RULE_functionArgs = 5, RULE_forLoop = 6, RULE_singleStatement = 7, 
		RULE_functionCall = 8, RULE_expression = 9, RULE_type = 10, RULE_comp = 11;
	public static readonly string[] ruleNames = {
		"prog", "chunk", "statement", "flowStatement", "functionType", "functionArgs", 
		"forLoop", "singleStatement", "functionCall", "expression", "type", "comp"
	};

	private static readonly string[] _LiteralNames = {
		null, "'{'", "'}'", "'('", "')'", "'['", "']'", "'<'", "'>'", "','", "';'", 
		"':'", "'->'", "'<-'", "'\\'", "'%'", "'+'", "'-'", "'*'", "'/'", "'&&'", 
		"'||'", "'while'", "'if'", "'else'", "'for'", "'in'", "'fn'", "'let'", 
		"'const'", "'return'", "'threaded'", "'await'", "'extern'", "'vararg'", 
		"'.'", "'!'", "'~'", "'true'", "'false'", "'='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "BLOCK_OPEN", "BLOCK_CLOSE", "PAR_OPEN", "PAR_CLOSE", "SQUARE_OPEN", 
		"SQUARE_CLOSE", "POINTY_OPEN", "POINTY_CLOSE", "SEPARATOR", "SEMI", "COLON", 
		"ARROW", "REVERSE_ARROW", "BACKSLASH", "MODULO", "PLUS", "MINUS", "MULT", 
		"DIV", "AND", "OR", "WHILE", "IF", "ELSE", "FOR", "IN", "FUNCTION", "LET", 
		"CONST", "RETURN", "ASYNC", "AWAIT", "EXTERN", "VARARG", "DOT", "BANG", 
		"UNTIL", "TRUE", "FALSE", "EQUALS", "COMP", "TYPE", "GENERIC", "IDENTIFIER", 
		"NUMBER", "FLOAT", "DEC", "DIGIT", "WS", "COMMENT", "STRING"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Twice.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static TwiceParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public TwiceParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public TwiceParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ChunkContext chunk() {
			return GetRuleContext<ChunkContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(TwiceParser.Eof, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITwiceVisitor<TResult> typedVisitor = visitor as ITwiceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 24;
			chunk();
			State = 25;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChunkContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chunk; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITwiceVisitor<TResult> typedVisitor = visitor as ITwiceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChunk(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChunkContext chunk() {
		ChunkContext _localctx = new ChunkContext(Context, State);
		EnterRule(_localctx, 2, RULE_chunk);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 30;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 27;
					statement();
					}
					} 
				}
				State = 32;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FlowStatementContext flowStatement() {
			return GetRuleContext<FlowStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(TwiceParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SingleStatementContext singleStatement() {
			return GetRuleContext<SingleStatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITwiceVisitor<TResult> typedVisitor = visitor as ITwiceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			State = 40;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 33;
				flowStatement();
				State = 35;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
				case 1:
					{
					State = 34;
					Match(SEMI);
					}
					break;
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 37;
				singleStatement();
				State = 38;
				Match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FlowStatementContext : ParserRuleContext {
		public FlowStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_flowStatement; } }
	 
		public FlowStatementContext() { }
		public virtual void CopyFrom(FlowStatementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StatementForContext : FlowStatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ForLoopContext forLoop() {
			return GetRuleContext<ForLoopContext>(0);
		}
		public StatementForContext(FlowStatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITwiceVisitor<TResult> typedVisitor = visitor as ITwiceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementFor(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StatementBlockContext : FlowStatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLOCK_OPEN() { return GetToken(TwiceParser.BLOCK_OPEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ChunkContext chunk() {
			return GetRuleContext<ChunkContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLOCK_CLOSE() { return GetToken(TwiceParser.BLOCK_CLOSE, 0); }
		public StatementBlockContext(FlowStatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITwiceVisitor<TResult> typedVisitor = visitor as ITwiceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementBlock(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StatementFunctionDefinitionContext : FlowStatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FUNCTION() { return GetToken(TwiceParser.FUNCTION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(TwiceParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FunctionTypeContext functionType() {
			return GetRuleContext<FunctionTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASYNC() { return GetToken(TwiceParser.ASYNC, 0); }
		public StatementFunctionDefinitionContext(FlowStatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITwiceVisitor<TResult> typedVisitor = visitor as ITwiceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementFunctionDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StatementWhileContext : FlowStatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHILE() { return GetToken(TwiceParser.WHILE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public StatementWhileContext(FlowStatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITwiceVisitor<TResult> typedVisitor = visitor as ITwiceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementWhile(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StatementIfContext : FlowStatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IF() { return GetToken(TwiceParser.IF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELSE() { return GetToken(TwiceParser.ELSE, 0); }
		public StatementIfContext(FlowStatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITwiceVisitor<TResult> typedVisitor = visitor as ITwiceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementIf(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FlowStatementContext flowStatement() {
		FlowStatementContext _localctx = new FlowStatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_flowStatement);
		int _la;
		try {
			State = 68;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IF:
				_localctx = new StatementIfContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 42;
				Match(IF);
				State = 43;
				expression(0);
				State = 44;
				statement();
				State = 47;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
				case 1:
					{
					State = 45;
					Match(ELSE);
					State = 46;
					statement();
					}
					break;
				}
				}
				break;
			case WHILE:
				_localctx = new StatementWhileContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 49;
				Match(WHILE);
				State = 50;
				expression(0);
				State = 51;
				statement();
				}
				break;
			case FOR:
				_localctx = new StatementForContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 53;
				forLoop();
				}
				break;
			case BLOCK_OPEN:
				_localctx = new StatementBlockContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 54;
				Match(BLOCK_OPEN);
				State = 55;
				chunk();
				State = 56;
				Match(BLOCK_CLOSE);
				}
				break;
			case FUNCTION:
			case ASYNC:
				_localctx = new StatementFunctionDefinitionContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 59;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==ASYNC) {
					{
					State = 58;
					Match(ASYNC);
					}
				}

				State = 61;
				Match(FUNCTION);
				State = 62;
				Match(IDENTIFIER);
				State = 63;
				functionType();
				State = 66;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
				case 1:
					{
					State = 64;
					statement();
					}
					break;
				case 2:
					{
					State = 65;
					expression(0);
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionArgsContext functionArgs() {
			return GetRuleContext<FunctionArgsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(TwiceParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public FunctionTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITwiceVisitor<TResult> typedVisitor = visitor as ITwiceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionTypeContext functionType() {
		FunctionTypeContext _localctx = new FunctionTypeContext(Context, State);
		EnterRule(_localctx, 8, RULE_functionType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70;
			functionArgs();
			State = 71;
			Match(COLON);
			State = 72;
			type(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionArgsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PAR_OPEN() { return GetToken(TwiceParser.PAR_OPEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PAR_CLOSE() { return GetToken(TwiceParser.PAR_CLOSE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(TwiceParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(TwiceParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COLON() { return GetTokens(TwiceParser.COLON); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON(int i) {
			return GetToken(TwiceParser.COLON, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SEPARATOR() { return GetTokens(TwiceParser.SEPARATOR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEPARATOR(int i) {
			return GetToken(TwiceParser.SEPARATOR, i);
		}
		public FunctionArgsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionArgs; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITwiceVisitor<TResult> typedVisitor = visitor as ITwiceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionArgs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionArgsContext functionArgs() {
		FunctionArgsContext _localctx = new FunctionArgsContext(Context, State);
		EnterRule(_localctx, 10, RULE_functionArgs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			Match(PAR_OPEN);
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IDENTIFIER) {
				{
				State = 75;
				Match(IDENTIFIER);
				State = 76;
				Match(COLON);
				State = 77;
				type(0);
				State = 84;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==SEPARATOR) {
					{
					{
					State = 78;
					Match(SEPARATOR);
					State = 79;
					Match(IDENTIFIER);
					State = 80;
					Match(COLON);
					State = 81;
					type(0);
					}
					}
					State = 86;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			State = 89;
			Match(PAR_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ForLoopContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FOR() { return GetToken(TwiceParser.FOR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(TwiceParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IN() { return GetToken(TwiceParser.IN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BANG() { return GetToken(TwiceParser.BANG, 0); }
		public ForLoopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_forLoop; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITwiceVisitor<TResult> typedVisitor = visitor as ITwiceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForLoop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ForLoopContext forLoop() {
		ForLoopContext _localctx = new ForLoopContext(Context, State);
		EnterRule(_localctx, 12, RULE_forLoop);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			Match(FOR);
			State = 93;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==BANG) {
				{
				State = 92;
				Match(BANG);
				}
			}

			State = 95;
			Match(IDENTIFIER);
			State = 96;
			Match(IN);
			State = 97;
			expression(0);
			State = 98;
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
